--- a/framework/CocoaLibSpotify.framework/Versions/A/Frameworks/libspotify.framework/Versions/10.1.16/Resources/Info.plist
+++ b/framework/CocoaLibSpotify.framework/Versions/A/Frameworks/libspotify.framework/Versions/10.1.16/Resources/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>Spotify</string>
+	<string>libspotify</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.spotify.Core</string>
 	<key>CFBundleInfoDictionaryVersion</key>
